<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spacex"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textAppearance="@style/Text.Bold.20"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:background="@drawable/layout_bg">

        <Button
            android:id="@+id/upcoming_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/white"
            android:text="@string/upcoming"
            android:textAppearance="@style/Text.Bold.18"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/launches_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="39dp"
            android:backgroundTint="@color/white"
            android:text="@string/launches"
            android:textAppearance="@style/Text.Bold.18"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toStartOf="@+id/rockets_button"
            app:layout_constraintStart_toEndOf="@+id/upcoming_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rockets_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="23dp"
            android:backgroundTint="@color/white"
            android:text="@string/rockets"
            android:textAppearance="@style/Text.Bold.18"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/upcoming_info"
            layout="@layout/launch_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="219dp"
            android:text="@string/launch_date"
            android:textAppearance="@style/Text.Normal.10"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_button" />

        <TextView
            android:id="@+id/launch_date_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="11dp"
            android:text="Thu Oct 17 5:30:00 2019"
            android:textAppearance="@style/Text.Normal.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_date" />

        <TextView
            android:id="@+id/launch_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/launch_site"
            android:textAppearance="@style/Text.Normal.10"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_date_data" />

        <TextView
            android:id="@+id/launch_site_data"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="11dp"
            android:text="Cape Canaveral Air Force Station Space Launch Complex 40"
            android:textAppearance="@style/Text.Normal.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_site" />


        <TextView
            android:id="@+id/count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="11dp"
            android:text="@string/count_down"
            android:textAppearance="@style/Text.Normal.10"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launch_site_data" />

        <TextView
            android:id="@+id/count_down_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="11dp"
            android:text="5 Hrs 30 mins more..."
            android:textAppearance="@style/Text.Normal.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count_down" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="99dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/launch_item"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>